# RocketSerializer

./: .gitattributes  .gitignore  CODEOWNERS  LICENSE.md  Makefile  README.md  destroy-the-bank.py  generate_nb_from_ork.py  nbbuilder-test.ipynb  ork2json-debugger.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.py  some_tests.ipynb  test_ork2json-debugger.py  testnbbuilder.ipynb
.github/workflows/: linter.yml  publish-to-pypi.yml  pylint.yml  test-pytest.yaml
GeneratedSimulations/: Teamparameters.json
GeneratedSimulations/Team/: DragCurve.csv  parameters.json  thrust_source.csv
GeneratedSimulations/Team06/: DragCoefficients.csv  parameters.json  thrust_source.csv
GeneratedSimulations/Team07/: DragCoefficients.csv  parameters.json  template_simulation.ipynb  thrust_source.csv
GeneratedSimulations/Team08/: rocket.ork
GeneratedSimulations/Team16/: DragCoefficients.csv  parameters.json  thrust_source.csv
GeneratedSimulations/Team17/: DragCoefficients.csv  parameters.json  thrust_source.csv
GeneratedSimulations/Team21/: DragCoefficients.csv  parameters.json  template_simulation.ipynb  thrust_source.csv
GeneratedSimulations/Team25/: DragCoefficients.csv  parameters.json  template_simulation.ipynb  thrust_source.csv
examples/: readme.txt
examples/EPFL--BellaLui--2020/: parameters.json  rocket.ork  simulation.ipynb
examples/NDRT--Rocket--2020/: drag_curve.csv  parameters.json  simulation.ipynb  thrust_source.csv
examples/ProjetoJupiter--Valetudo--2019/: parameters.json  rocket.ork  simulation.ipynb
examples/Team15/: rocket.ork
examples/Team16/: rocket.ork
examples/Team17/: rocket.ork
examples/Team21/: rocket.ork
examples/WERT--Prometheus--2022/: drag_curve.csv  parameters.json  rocket.ork  simulation.ipynb  thrust_source.csv
exemples/Team06/: rocket.ork
open_rocket_serializer/: __init__.py  _helpers.py  cli.py  nb_builder.py  ork_extractor.py
rocketserializer/: _helpers.py  cli.py  nb_builder.py  ork_extractor.py
tests/: conftest.py
(+62 files in other folders)
